# qr-excel

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  qr-excel.spec  requirements.txt  run.py  upi-qr-add.spec
.github/workflows/: release.yml
qr_excel/: __init__.py
qr_excel/cli/: app.py  display.py  prompts.py
qr_excel/core/: models.py  processor.py
qr_excel/database/: logger.py
qr_excel/excel/: parsers.py
qr_excel/qr/: generator.py
qr_excel/utils/: paths.py
scripts/: install.ps1  install.sh
scripts/homebrew/: upi-qr-add.rb
scripts/winget/: ezhil-003.upi-qr-add.yaml
tests/: test_input_handling.py  test_sessions.py  test_upi_qr_add.py
upi_qr_add/: __init__.py  core.py  logger.py  main.py  qr_generator.py  utils.py
upi_qr_add/cli/: app.py  ascii_ui.py  display.py  prompts.py
upi_qr_add/core/: exceptions.py  models.py  processor.py
upi_qr_add/database/: logger.py
upi_qr_add/excel/: operations.py  parsers.py
upi_qr_add/utils/: paths.py  upi.py
