[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upi-qr-add"
version = "0.1.0"
description = "Interactive CLI tool for adding decorated UPI QR codes to Excel rows."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "upi-qr-add maintainers" }
]
dependencies = [
  "typer[all]>=0.12.3",
  "rich>=13.7.1",
  "openpyxl>=3.1.2",
  "qrcode[pil]>=7.4.2",
  "Pillow>=10.3.0",
  "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
upi-qr-add = "upi_qr_add.main:app"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["upi_qr_add*"]

[tool.setuptools.package-data]
upi_qr_add = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
